chau_lp up 9h41 06/01

--- a/sprint2-frontend/src/index.html
+++ b/sprint2-frontend/src/index.html
@@ -6,7 +6,7 @@
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	
+
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,6 +17,11 @@
 
 </head>
 <body>
+
+<script
+  src="https://www.paypal.com/sdk/js?client-id=AaUpvUeVPO3jy4HLYgJDwhqFlf3YRAgHJIfnQ0cqimonZUEdxPKoRzOS4NiV7av7nPD6gTtQ3B5caDrc">
+</script>
+
 <app-root></app-root>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
