--- a/sprint2-frontend/src/index.html
+++ b/sprint2-frontend/src/index.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body>
+<body style="">
 
 <script
   src="https://www.paypal.com/sdk/js?client-id=AaUpvUeVPO3jy4HLYgJDwhqFlf3YRAgHJIfnQ0cqimonZUEdxPKoRzOS4NiV7av7nPD6gTtQ3B5caDrc">
